--- a/.env.dist
+++ b/.env.dist
@@ -1,11 +1,11 @@
-BOT_TOKEN=123456:Your-TokEn_ExaMple
-ADMINS=123456789,987654321
+BOT_TOKEN=7912892636:AAGA2VVq9rPAoo_nVjxO6NpGnqR2rOfnYwM
+ADMINS=
 USE_REDIS=True
 
-POSTGRES_USER=someusername
-POSTGRES_PASSWORD=postgres_pass12345
-POSTGRES_DB=bot
-DB_HOST=pg_database
+POSTGRES_USER=sosy_sam1
+POSTGRES_PASSWORD=Sametkoc49
+POSTGRES_DB=sosy_sam1
+DB_HOST=localhost
 
 FRONTEND_URL=https://example.com
 
