--- a/.env.dist
+++ b/.env.dist
@@ -7,7 +7,7 @@ POSTGRES_PASSWORD=Sametkoc49
 POSTGRES_DB=sosy_sam1
 DB_HOST=localhost
 
-FRONTEND_URL=https://example.com
+FRONTEND_URL=https://terhaba3456.github.io/my-mini-app/
 
 REDIS_HOST=redis_cache
 REDIS_PORT=6388
